@@ -1,3 +1,6 @@
+2016/7/27 v80
+	1. The nameplates now can display information about target change and threat level.
+
 2016/7/27 v79
 	1. Fix the active spell's cooldown won't refresh if you active the hidden global cooldown option.
 
